# vibe_file_tools

./: README.md  pyproject.toml  requirements.txt  test_run.nu  uv.toml
.vibe/: config.toml
.vibe/agents/: project.toml
vibe_file_tools/: file_tools.py  mcp_tool.py  tool.json
